Corrected the routing for the DiscretePost class Updated the NewPost class to include a check to enforce unique urls (i.e. now identical titles on the same day.

--- a/templates/formatted_post.html
+++ b/templates/formatted_post.html
@@ -22,7 +22,7 @@
   </div>
 	{% if summarize_text is none %}
 	{% else %}
-	<a class = "gray-link"  href="/insider{{page.url_path}}">Continue reading ... </a> 
+	<a class = "gray-link"  href="{{page.url_path}}">Continue reading ... </a> 
 	{% endif %}
   
   
