commit before changing to bootstap

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,11 @@
 <html>
 <head>
 	<link type="text/css" rel="stylesheet" href="/stylesheets/static.css"/>
-		<title>DailyDope</title>
+		<title>TechRag</title>
+		
+	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    
+		
 </head>
 	
 <body>
