--- a/stylesheets/static.css
+++ b/stylesheets/static.css
@@ -262,7 +262,7 @@ body {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 30px;
+	margin: 0 auto ; 
     text-decoration: none;
 }
 
