--- a/stylesheets/static.css
+++ b/stylesheets/static.css
@@ -7,21 +7,27 @@ html {
 }*/
 
 body {
-	postition: relative
 	height: 100%;
-	
+	width: 100%;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 14px;
-	
-	width: 800px;
 	margin: 0 auto;
 	color: #333;
+
+}
+
+@media screen and (min-width:980px) {
+    body { padding-top: 40px; }
+}
+
+.heading { 
+      font-family: Helvetica, Arial, sans-serif;
+      text-align: center; 
 }
 
 .header {
 	height: 30px;
 	line-height: 30px;
-	
 	margin-bottom: 10px;
 }
 
@@ -262,7 +268,7 @@ body {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-	margin: 0 auto ; 
+	margin: 2% auto 2% auto; 
     text-decoration: none;
 }
 
