--- a/stylesheets/static.css
+++ b/stylesheets/static.css
@@ -41,10 +41,10 @@ body {
 	margin-right: 20px;
 }
 
-.gray-link {
-	color: gray;
-	text-decoration: none;
-}
+	.gray-link {
+		color: gray;
+		text-decoration: none;
+	}
 
 .gray-link:visited {
 	color: gray;
@@ -62,204 +62,29 @@ body {
 	clear: both;
 }
 	
-/* FORMATTING FOR THE BASE TEMPLATE */
+/* Formatting for the base template */
 #base-container { 
 	position: relative; 
 }
 
 
-#base-leftcol { 
-	/*position: absolute;*/ 
-	width: 22.5%;
-	float:left; 
+/* Formatting for an error logging in */ 
+.fallbackBrowserError {
+	color:red; 
 }
 
-#base-content {
-	/*position: absolute;*/
-	width:50%; 
-	float: left;
-}	
-
-#base-rightcol{
-	margin-left: 15px;
-	position: relative; 
-	width:22.5%;
-	float: left; 
-	display:block; 
-	padding: 0 10px 0 10px;
-}
-
-/* FORMATTING FOR THE SIDEBAR */ 
-.sidebar {
-	display:block; 
-	padding-bottom: 5px;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 10px;
-	font-weight: bold; 
-}
-
-.sidebar-topvote-header {
-	padding-top: 5px; 
-	padding-bottom: 5px;
-	font-weight: normal;
-	font-size: 10px;
-	background: #eee; 
-}
-
-.sidebar-topvote-title {
-	font-size: 12px;
-	padding-bottom: 0px;
-	font-weight: normal; 
-}	
-
-.sidebar-topvote-author {
-	font-size: 10px;
-	padding-bottom: 5px; 
-	font-weight:normal; 
-	}	
-	
-.sidebar-topvote-author pre {
-	padding:0px;
-	margin: 0px;
-	}
-
-.sidebar-recent-header {
-	padding-top:5px; 
-	padding-bottom: 5px;
-	font-weight: normal;
-	font-size: 10px;
-	background: #eee
-}
-
-.sidebar-recent-title {
-	font-size: 12px;
-	padding: 0px;
-	font-weight: normal; 
-}	
-
-.sidebar-recent-author {
-	font-size: 10px;
-	padding: 0px;
-	font-weight: normal; 
-	}	
-
-/*FORMATING FOR THE EXISTING COMMENTS */ 
-.comment-title {
-	font-size:10px;
-	margin-top: 5px;
-}
-
-.comment-content {
-	font-size: 10px;
-}
-
-.comment-sig { 
-	border-bottom: 1px solid black;
-}	
-
-.main-comment {
-	font-size: 8px; 
+.compose-container { 
+	width: 80%; 
 }
 
 	
-/*FORMATTING FOR THE COMMENT FORM*/ 
-
-/*OUTLINE
-/*comment-cmt-form    (we have cmts and then input form)
-/*	comment-divider
-/*	comment-input-title
-/* 	comment-input-area
-/*	comment footer */
-
-#comment-container {
-	font-size:8px;
-	margin-top: 5px;
-	padding: 2px;
+.msg-form input{ 
+	width: 98%; 
 }
 
-#comment-container .comment-divider {
-	font-size:8px;
-	background:#C0C0C0;
-	padding: 2px; 
-	color:white; 
-	font-weight: bold; 
-}
-
-#comment-container .comment-form {
-	margin-top: 5px;
-	padding-top: 5px; 
-	display: inline; 
-	background: #eee; 
-	float: left; 
-	font-weight: bold; 
-	width: 100%
-}
-
-#comment-container .comment-form form {
-	margin-top: 5px;
-	display: inline;
-	background: #eee;
-	float: left; 
-	width: 100%;
-}
-
-#comment-container .comment-form span {
-	background: #eee;
-	float: left; 
-	width: 20%;
-}
-#comment-container .comment-form input {
-	float: left; 
-	width: 70%;
-	display: inline; 
-}
-
-
-#comment-container .comment-form textarea {
-	float: left; 
-	width: 70%;
-	height: 100px; 
-	display: inline; 
-}
-
-#comment-container .comment-form button {
-	float: left; 
-	height: 30px; 
-	margin: 0;
-    background: white; 
-	border: 1px solid #BDBDBD;
-}
-
-#comment-container .gray-link {
-	font-size: 11px;
-	font-weight: bold; 
-	color: gray;
-	text-decoration: none;
-}
-
-#comment-container .gray-link:hover {
-	text-decoration: underline;
-}
-
-#comment-container .gray-link:visited {
-	color: gray; 
-}
-
-
-#base-rightcol .gray-link {
-	font-size: 11px;
-	font-weight: bold; 
-	color: gray;
-	text-decoration: none;
-}
-
-#base-rightcol .gray-link:visited {
-	color: gray;
-}
-
-#base-rightcol .gray-link:hover {
-	text-decoration: underline;
-*/
+.msg-form text-area{ 
+	width: 98%; 
+	min-height: 50%; 
 }
 	
 .main-title {
@@ -282,9 +107,10 @@ body {
 }
 
 .main-edit textarea {
-	position: absolute;
-	top: 60px;
-	bottom: 30px;
+	width:95%;
+	min-height:200px; 
+	top: 6%;
+	bottom: 3%;
 	left: 0; 
 	right: 0;
 	font-size: 14px;
@@ -330,11 +156,13 @@ body {
 }
 
 
-.history-table {
+.summary-table {
 	border-collapse: collapse;
+	overflow: hidden; 
+	white-space: nowrap; 
 }
 
-.history-table .gray {
+.summary-table .gray {
 	background-color: #eee;
 }
 
