--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
 		     we leave the content blank allowing the content area to collapse --> 
 		<div class="row-fluid"> 
 			<div class="span12"> 
-				{% block editblock %}
+				{% block msgblock %}
 				{% endblock %}
 			</div>
 		</div> 
