--- a/templates/composeMsg.html
+++ b/templates/composeMsg.html
@@ -6,11 +6,11 @@
 	<div class = "sidebar"> 
 	
 		<!-- insert numMsgs --> 
-		<a class="gray-link" href="#">Inbox({{numMsgs}})</a> 
+		<a class="gray-link" href="/">Inbox( {{numMsgs}} )</a> 
 	</div>
 	
 	<div class = "sidebar"> 
-		<a class="gray-link" href="#">Sent</a>
+		<a class="gray-link" href="#">Sent( {{numSendMsgs}} )</a>
 	</div>
 
 {% endblock %}
