--- a/templates/summaryPanel.html
+++ b/templates/summaryPanel.html
@@ -11,11 +11,11 @@
 	<div class = "sidebar"> 
 	
 		<!-- insert numMsgs --> 
-		<a class="gray-link" href="#">Inbox ( {{numMsgs}} )</a> 
+		<a class="gray-link" href="/">Inbox ( {{numMsgs}} )</a> 
 	</div>
 	
 	<div class = "sidebar"> 
-		<a class="gray-link" href="#">Sent ( {{numSentMsgs}} )</a>
+		<a class="gray-link" href="/">Sent ( {{numSentMsgs}} )</a>
 	</div>
 
 {% endblock %}
@@ -27,15 +27,15 @@
 		{% for msg in msgs %}
 			<tr class="{{loop.cycle('gray','')}}">
 				<td class="span2">
-					<a class = "gray-link" href="{{msg.url_path}}">{{msg.author}}</a>
+					<a class = "{{msg.hasBeenRead}}" href="{{msg.msgURL}}">{{msg.author}}</a>
 				</td>
 				
 				<td class="span10">
-					<a class = "gray-link" href="{{msg.url_path}}">{{msg.subject}}</a>
+					<a class = "{{msg.hasBeenRead}}" href="{{msg.msgURL}}">{{msg.subject}}</a>
 				</td>
 				
 				<td class="span2">
-					<a class = "gray-link" href="{{msg.url_path}}">{{ msg.created.strftime("%b %d, %Y") }}</a>
+					<a class = "{{msg.hasBeenRead}}" href="{{msg.msgURL}}">{{ msg.created.strftime("%b %d, %Y") }}</a>
 				</td>
 					
 			</tr>
