moved the inbox/outbox query to initialize

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
 							<tr> 
 								<!-- we need to check if we're working with an HTML5 browser --> 
 								<td class = "loginLabel">&nbsp</td>
-								<td class = "loginError"> 
+								<td class = "error"> 
 									{{password_error}}
 								</td> 
 							</tr> 
