add Group model

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
 		
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 	<link type="text/css" rel="stylesheet" href="/stylesheets/static.css"/>
-	 <!-- Imports to make the accordian work --> 
+
+
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
 
@@ -23,7 +24,7 @@
 		  	<a class="brand" href="/">uMail</a> 
 			{% if not user and not isSignupPage %}
 				
-				<a class="btn btn-danger pull-right" href="/signup">Create account</a>
+				<a class="btn btn-warning pull-right" href="/signup">Create account</a>
 				
 			{% endif%}
 				
