--- a/templates/composeMsg.html
+++ b/templates/composeMsg.html
@@ -48,7 +48,7 @@
 			  </div>
 			
 			  <div> 
-				<button class = "btn btn-danger btn-small" type = "submit">Send</button>
+				<button class = "btn btn-warning btn-small" type = "submit">Send</button>
 			  </div>
 
 		  </form>
