--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,17 @@
 <html>
 <head>
 	<title>uMail: Udacity email</title>
-		
-	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+	
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css">
+	
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/js/bootstrap.min.js"></script>
+	
 	<link type="text/css" rel="stylesheet" href="/stylesheets/static.css"/>
-
-
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-
-    
-		
+	
+	<style> body { padding-top: 70px; } </style> 
+	
 </head>
 	
 <body>
@@ -21,10 +22,10 @@
     <div class="navbar navbar-inverse navbar-fixed-top"> 
       <div class="navbar-inner">
 		<div class="container"> 
-		  	<a class="brand" href="/">uMail</a> 
+		  	<a class="navbar-brand" href="/">uMail</a> 
 			{% if not user and not isSignupPage %}
 				
-				<a class="btn btn-warning pull-right" href="/signup">Create account</a>
+				<a class="btn btn-warning pull-right navbar-compose-btn" href="/signup">Create account</a>
 				
 			{% endif%}
 				
@@ -32,9 +33,9 @@
 	  </div>
     </div>
 	
-	<div class="container-fluid"> 
+	<div class="container"> 
 	
-		<div class="row-fluid header">		
+		<div class="row header">		
 			<div class="controls">
 				{% if user %}
 					{{user.user_name}} (<a class="gray-link" href="/logout">logout</a>)
@@ -46,37 +47,32 @@
 					 
 					
 					<form method="post">
-						<table>
-							<tr>&nbsp</tr> 
-						
-							<tr> 
-								<td class ="label">
-									Username
-								</td>
-								<td>
-									<input required type = "text" pattern = "^\w{3,20}$" name = "username" value= "{{name_provided}}" >
-								</td>
-							</tr>
-						
-							<tr>
-								<td class ="label">
-									Password
-								</td>
+						<div class = "row"> 
 							
-								<td>
-									<input type = "password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{6,20}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 6 characters, including UPPER/lowercase and numbers' : '')" name = "password" value="">
-								</td>
-							</tr>
+							<div class="input-group col-lg-3 col-offset-6">
+								<span class="input-group-addon">Username</span>
+								<input class="form-control" placeholder="Username" required type = "text" pattern = "^\w{3,20}$" name = "username" value= "{{name_provided}}">     
+							</div>
 							
-							<tr> 
-								<!-- we need to check if we're working with an HTML5 browser --> 
-								<td class = "loginLabel">&nbsp</td>
-								<td class = "error"> 
-									{{password_error}}
-								</td> 
-							</tr> 
-						</table>
-					
+						</div> 	
+						
+						<div class="row">
+							
+							<div class="input-group col-lg-3 col-offset-6">
+								<span class="input-group-addon">Username</span>
+							
+								<input class="form-control" placeholder="Password" type = "password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{6,20}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 6 characters, including UPPER/lowercase and numbers' : '')" name = "password" value="">
+							</div>
+						</div>
+							
+						<div = "row"> 
+							<!-- we need to check if we're working with an HTML5 browser --> 
+							<div class = "loginLabel">&nbsp</div>
+							<div class = "error"> 
+								{{password_error}}
+							</div> 
+						</div> 
+								
 						<input id = "mainPageSignInBtn" class="btn btn-primary" type = "submit" value = "Sign in">
 						<input type="hidden" id="password_error_dropbox" name="password_error_dropbox" value={{password_error}} />
 					</form>
@@ -87,21 +83,21 @@
 		
 		{% if user %} 
 			<!-- this begins the content section --> 
-			<div class="row-fluid"> 
-				<div class="span2 offset1"> 
+			<div class="row"> 
+				<div class="col-lg-2 col-offset-1"> 
 					{% block sidebar %}
 					{% endblock %}
 				</div>
 					
-				<div class="span9"> 
+				<div class="col-lg-9"> 
 					{% block content %}
 					{% endblock %}
 				</div>
 				
 				<!-- this begins the section where we compose messages. When we compose a message 
 		     we leave the content blank allowing the content area to collapse --> 
-			<div class="row-fluid"> 
-				<div class="span9"> 
+			<div class="row"> 
+				<div class="col-log-9"> 
 					{% block msgblock %}
 					{% endblock %}
 				</div>
