--- a/stylesheets/static.css
+++ b/stylesheets/static.css
@@ -36,7 +36,7 @@ body {
 
 .controls {
 	float: right;
-	font-size: 13px;
+	font-size: 1em;
 	color: gray;
 }
 
@@ -90,6 +90,10 @@ body {
 	width: 100%;
 	border: 1px solid; 
 }
+
+/* formatting for signup page */ 
+
+
 
 	
 .msg-form input{ 
