--- a/templates/signupPage.html
+++ b/templates/signupPage.html
@@ -5,48 +5,52 @@
 {% endblock %}
 
 {% block signupPage %}
-	<h2>Signup</h2>
-		<form method="post">
-			<table>
-				<tr>
-					<td class="label">
-						Username
-					</td>
-					<td>
-						<input type = "text" pattern="^\w{3,20}$" name = "username" value= "{{name_provided}}">
-					</td>
-				</tr>
+	<div class = "row"> 
+		<h2 class="col-lg-6 col-lg-offset-2">Signup</h2>
+	</div> 		
+		<form class="form-horizontal" role="form" method="post">
 				
-				<tr>
-					<td class="label">
-						Password
-					</td>
-					<td>
-						<input type = "password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{6,20}" name="pwd1" onchange="
-							this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 6 characters, including UPPER/lowercase and numbers' : ''); if(this.checkValidity()) form.pwd2.pattern = this.value">
-					</td>
-				</tr>
+			<div class="form-group">
+				<label for="InputUsername" class="col-lg-2 control-label">Username</label>
+			 	<div class="col-lg-5">
+			    	<input class="form-control" id="InputUsername" placeholder="Username" 
+								type = "text" pattern="^\w{3,20}$" name = "username" value= "{{name_provided}}">
+				</div>
+			</div>
 				
-				<tr>
-					<td class="label">
-						Verify Password
-					</td>
-					<td>
-						<input type="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{6,}" name="pwd2" onchange="
+			<div class="form-group">
+		   		<label for="InputPassword1" class="col-lg-2 control-label">Password</label>
+			    
+		    	<div class="col-lg-5">
+		     		<input class="form-control" id="InputPassword1" placeholder="Password" type = "password" required 
+ 			     			pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{6,20}" name="pwd1" 
+ 			     			onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 6 characters, including UPPER/lowercase and numbers' : ''); if(this.checkValidity()) form.pwd2.pattern = this.value">
+		    	</div>
+		  	</div>
+			  	
+		  	<div class="form-group">
+		   		<label for="InputPassword2" class="col-lg-2 control-label">Verify Password</label>
+			    
+		    	<div class="col-lg-5">
+		     		<input class="form-control" id="InputPassword2" placeholder="Password" type="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{6,}" name="pwd2" onchange="
 							this.his.validity.patternMismatch ? 'Please enter the same Password as above' : '');">
-					</td>
-				</tr>
-					
-				<tr>
-					<td>&nbsp</td>
-					<td class="fallbackBrowserError">
-						{{fallback_error}}
-					</td>
-				</tr>
-			</table>
-		<input class ="btn btn-primary" 	type = "submit">
-	<input type="hidden" name="prior_url" value={{prior_url}}/>
-</form>
+				</div>
+		  	</div>
+	
+		 <div class="form-group">
+		   <div class="col-lg-offset-2 col-lg-5">
+	    		<button type="submit" class="btn btn-warning">Submit</button>
+	  		</div>
+	 	</div>
+	</form>
+	
+	<div class="row"> 
+		<div class="fallbackBrowserError col-lg-5 col-lg-offset-2">
+			{{fallback_error}}
+		</div>
+	</div> 
+	
+ 	</div> 
 
 {% endblock %}
 
