--- a/stylesheets/static.css
+++ b/stylesheets/static.css
@@ -91,10 +91,11 @@ body {
 	border: 1px solid; 
 }
 
-/* formatting for signup page */ 
+/* formatting for summaryPanel page */ 
 
-
-
+.viewEmailBtn { 
+	margin: 0; 
+}
 	
 .msg-form input{ 
 	width: 98%; 
