--- a/templates/composeMsg.html
+++ b/templates/composeMsg.html
@@ -27,35 +27,27 @@
 		</div>
 	</div>
 		
-		<form class = "msg-form" method="post">
-			
-			<div class="row">								
-				<div class="input-group col-lg-12">
-					<span class="input-group-addon">To&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-					<input class="col-lg-12 form-control" placeholder="To" type="text" required name="recipient" value="{{recipient}}">
-				</div>
-			</div>	  
-			
-			<div class="row">								
-				<div class="input-group col-lg-12">
-					<span class="input-group-addon">Subject</span>
-					<input class="col-lg-12 form-control" placeholder="Subject" type="text" required name="subject" value="{{subject}}">
-			  </div>
-			</div> 
-			
-			<div class = "row">
-				<div class="btn btn-warning">Message</div>
-				<textarea class="input-group col-lg-12" rows="16" name="body">{{body}}</textarea>
-			  </div>
-
-			  <div class="error">
-			    {{error}}
-			  </div>
-			
-			  <div> 
-				<button class = "btn btn-warning btn-small" type = "submit">Send</button>
-			  </div>
-
-		  </form>
+		<form role="form" method="post">
+  			<div class="form-group">
+    			<label for="InputRecipient">To</label>     			
+    			<input class="form-control" id="InputRecipient" type="text" placeholder="Enter recipient" 
+    			required name="recipient" pattern="^\w{3,20}$" value="{{recipient}}">
+  			</div>
+  			
+  			
+  			<div class="form-group">
+    			<label for="InputSubject">Subject</label>
+    			<input class="form-control" id="InputSubject" type="text" placeholder="Subject"  name="subject" value="{{subject}}">
+  			</div>
+  
+  			<div class="form-group">
+    			<label for="InputMessageBody">Message</label>
+    			<textarea class="form-control" id="InputMessageBody" rows="16" name="body">{{body}}</textarea>
+  			</div>
+  
+  			<button type="submit" class="btn btn-warning">Send</button>
+		</form>
+		
+				
   </div> 
 {% endblock %}
