--- a/templates/summaryPanel.html
+++ b/templates/summaryPanel.html
@@ -53,15 +53,15 @@
 						{% for msg in msgs %}
 							<tr>
 								<td>
-									<a class = "{{msg.hasBeenRead}}" href="{{msg.msgURL}}">{{msg.author}}</a>
+									<a class = "{{msg.hasBeenRead}}" href="/{{msg.key().id()}}">{{msg.author}}</a>
 								</td>
 				
 								<td>
-									<a class = "{{msg.hasBeenRead}}" href="{{msg.msgURL}}">{{msg.subject}}</a>
+									<a class = "{{msg.hasBeenRead}}" href="/{{msg.key().id()}}">{{msg.subject}}</a>
 								</td>
 				
 								<td>
-									<a class = "{{msg.hasBeenRead}}" href="{{msg.msgURL}}">{{ msg.created.strftime("%b %d, %Y") }}</a>
+									<a class = "{{msg.hasBeenRead}}" href="/{{msg.key().id()}}">{{ msg.created.strftime("%b %d, %Y") }}</a>
 								</td>
 							</tr>
 						{% endfor %}
