--- a/templates/composeMsg.html
+++ b/templates/composeMsg.html
@@ -10,7 +10,7 @@
 	</div>
 	
 	<div class = "sidebar"> 
-		<a class="gray-link" href="#">Sent( {{numSentMsgs}} )</a>
+		<a class="gray-link" href="/sent">Sent( {{numSentMsgs}} )</a>
 	</div>
 
 {% endblock %}
