--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>uMail: Udacity email</title>
+	<title>uMsg: Udacity messaging</title>
 	
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css">
@@ -22,7 +22,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top"> 
       <div class="navbar-inner">
 		<div class="container"> 
-		  	<a class="navbar-brand" href="/">uMail</a> 
+		  	<a class="navbar-brand" href="/">uMsg</a> 
 			{% if not user and not isSignupPage %}
 				
 				<a class="btn btn-warning pull-right navbar-compose-btn" href="/signup">Create account</a>
