--- a/templates/composeMsg.html
+++ b/templates/composeMsg.html
@@ -18,8 +18,8 @@
 
 
 {% block content %}
-  <div class = "container"> 
-	<div class="navbar">
+  <div class = "container col-lg-10"> 
+	<div class="navbar navbar-default">
 		<div class="navbar-inner">
 			<ul class="nav">
 				<li>New uMail</li>
