--- a/templates/summaryPanel.html
+++ b/templates/summaryPanel.html
@@ -30,7 +30,7 @@
 	<div class="row")>
   		<div class="col-lg-10"> 
   
-  			<div class="panel">
+  			<div class="panel panel-default">
   	 			<div class="panel-heading">
     				<h3 class="panel-title">Messages</h3>
 						<ul class="pager">
