add control flow logic so trie data is sent only once

--- a/templates/summaryPanel.html
+++ b/templates/summaryPanel.html
@@ -72,6 +72,15 @@
 		
 		</div>  
 	</div> 
+	
+	{% if data %}
+		<script type="text/javascript">
+			function test_func(dataArg) {
+				console.log(dataArg);
+			}
+			test_func( {{ data|safe }} );
+		</script>
+	{% endif %} 
 {% endblock %}
 
 
