deleting unused files

--- a/templates/composeMsg.html
+++ b/templates/composeMsg.html
@@ -51,7 +51,15 @@
   
   			<button type="submit" class="btn btn-warning">Send</button>
 		</form>
+		<div class="row"> 
+			<div class="col-lg-10"> 
+				<span class="label label-danger">{{fallback_error}}</span>
+			</div>
+		</div> 
   </div> 
+ 
+
+  
  
   <div id = "datalistDiv"></div> 
   <script type="text/javascript"> 
