--- a/templates/viewGroup.html
+++ b/templates/viewGroup.html
@@ -32,7 +32,7 @@
 <script type="text/javascript" src="\static\js\postFromButton.js"></script>
 <div class = "row"> 
   <div class = "col-lg-10"> 
-  <div class="panel">
+  <div class="panel panel-default">
   	 <div class="panel-heading">
   	 </div>
 			
