refactor the signup page to catch edge cases

--- a/templates/viewGroup.html
+++ b/templates/viewGroup.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class = "sidebar"> 
-		<a class="gray-link" href="/groups">Groups</a>
+		<a class="gray-link" href="/group">Groups</a>
 	</div>
 
 	
