refactor: replace groupname with key_name in UserGroup

--- a/templates/viewGroup.html
+++ b/templates/viewGroup.html
@@ -48,7 +48,7 @@
 				{% for group in groups %}
 				<tr>
 					<td>
-						{{group.groupname}}
+						{{group.key().name()}}
 					</td>
 				{% endfor %}
 		    </tbody> 
