--- a/templates/viewGroup.html
+++ b/templates/viewGroup.html
@@ -11,11 +11,11 @@
 	<div class = "sidebar"> 
 	
 		<!-- insert numMsgs --> 
-		<a class="gray-link" href="/">Inbox ( {{numMsgs}} )</a> 
+		<a class="gray-link" href="/">Inbox ( {{num_msgs}} )</a> 
 	</div>
 	
 	<div class = "sidebar"> 
-		<a class="gray-link" href="/sent">Sent ( {{numSentMsgs}} )</a>
+		<a class="gray-link" href="/sent">Sent ( {{num_sent_msgs}} )</a>
 	</div>
 
 	<div class = "sidebar"> 
