refactor: put SentPage handler in separate module

--- a/templates/summaryPanel.html
+++ b/templates/summaryPanel.html
@@ -74,7 +74,7 @@
 		</div>  
 	</div> 
 	
-	<input type="hidden" id = "hiddenPageNum" name="hiddenPageNum" value={{ pageNum }} />
+	<input type="hidden" id = "hiddenPageNum" name="hiddenPageNum" value={{ page_num }} />
 	
 	{% if data %}
 		<script type="text/javascript">
